# cascadeur-mcp

./: .gitignore  CLAUDE.md  README.md  install_cascadeur_side.py  pyproject.toml
docs/: cascadeur-api-notes.md
src/cascadeur_mcp/: server.py
